# Scout-open-source

./: LICENSE  README.md
roller_eye/: CMakeLists.txt  build.sh  build_realease_deb.sh  cleanLog.sh  gen_version.cmake  install_deps.sh  package.xml
roller_eye/DEBIAN/: control.aarch64  control.x86_64  postinst
roller_eye/cfg/: Image.cfg  Project.cfg
roller_eye/docs/: TrackModelSupporForScout.txt
roller_eye/include/: aconfig.h  version.h  zlog.h
roller_eye/include/imu_filter_madgwick/: imuFilterMadgwickConfig.h  imu_filter.h  imu_filter_ros.h
roller_eye/include/nlohmann/: json.hpp
roller_eye/include/rk_isp/: rk_isp_wrapper.h  rkisp_control_loop.h
roller_eye/include/rk_mpp/osal/: mpp_log.h
roller_eye/include/rk_rga/: RockchipRga.h  drmrga.h  rga.h
roller_eye/include/roller_eye/: GyroSensor.h  InputEventReader.h  LightSensor.h  MmaSensor.h  ProximitySensor.h  SensorBase.h  algo_utils.h  aplay.h  arecord.h  audio_stream_pub.h  block_queue.h  camera_handle.hpp  common_macros.h  cv_img_stream.h  data_publisher.h  data_publisher2.h  decoder_aac.h  device_interface.h  download_mgr.h  encoder.h  encoder_aac.h  encoder_h264.h  encoder_h264_mpp.h  encoder_jpeg.h  graphic_utils.h  ibeacon_library.h  kalman.h  motor.h  msgqueue.h  net_speaker.h  obj_detect_pub.h  out_charging_pile.h  param_utils.h  pic_stream_pub.h  platfarm_define.h  plog_plus.h  plt_assert.h  plt_config.h  plt_download.h  plt_frame.h  (+26 more)
roller_eye/include/roller_eye/udev/: LSM9DS1_Types.h  SparkFunLSM9DS1.h  rpi_ak09918.h  rpi_i2c.h  vl53l0x_api.h  vl53l0x_helper.h  vl53l0x_platform.h  vl53l0x_platform_log.h  vl53l0x_types.h
roller_eye/include/tensorflow/tf_detect/: bitmap_helpers_impl.h  get_top_n.h  get_top_n_impl.h
roller_eye/kernel/: compute-residual.cl  fast-gray.cl
roller_eye/launch/: start.launch
roller_eye/lib/: librga.so.1  librockchip_mpp.so.0  libzlog.so.1.2  rollereye.py  rollereye_ros_bridge.py
roller_eye/lib/aarch64-linux-gnu/: motorbl.ko  motorbl_old.ko  motorbr.ko  motorbr_old.ko  motorfl.ko  motorfl_old.ko  motorfr.ko  motorfr_old.ko
roller_eye/msg/: alexskill.msg  contour.msg  detect.msg  frame.msg  patrol_status.msg  record.msg  status.msg  task.msg  wifi_config_info.msg  wifi_info.msg
roller_eye/param/: px30.yaml  vo_fast.yaml
roller_eye/scripts/: S21mountall.sh  area_request.sh  check_rec_disk.sh  cleanLog.sh  clean_imu_calib.sh  ibeacon_scan_all  ibeacon_scan_v2  manual_sync_zone.sh  scan_wifi_init.sh  scout_reset.sh  scout_reset2.sh  start.sh  start_blue.sh  timezone_request.sh  wifi_config_ap.sh  wifi_start_ap.sh  wifi_start_sta.sh
roller_eye/src/decoder/: decoder_aac.cpp
roller_eye/src/encoder/: encoder.cpp  encoder_aac.cpp  encoder_h264.cpp  encoder_h264_mpp.cpp  encoder_jpeg.cpp
roller_eye/src/inc/: VideoStream.h
roller_eye/src/inc/alsa/: asoundlib.h  control.h  error.h  global.h  iatomic.h  mixer.h  pcm.h  pcm_extplug.h  pcm_ioplug.h  use-case.h  version.h
roller_eye/src/nodes/: akaze.cpp  alg_backing_up.cpp  alg_backing_up.h  arecord.c  audio_stream_pub.cpp  detect_record_node.cpp  media_core_node.cpp  mono_image_pub.cpp  mono_image_pub.h  motion_detect.cpp  motion_detect.h  motor_node.cpp  motor_tune_node.cpp  nav_path_node.cpp  obj_detect_pub.cpp  pic_stream_pub.cpp  rec_db_helper.cpp  recorder_agent_node.cpp  recorder_jpg.cpp  recorder_mgr.cpp  recorder_mp4.cpp  rtmp_node.cpp  sched_node.cpp  sensors_node.cpp  sound_effects_mgr.cpp  speaker_node.cpp  supervisor_node.cpp  ui_node.cpp  upgrader_node.h  util_node.cpp  video_stream_pub.cpp  wifi_node.cpp
roller_eye/src/nodes/imu_filter_madgwick/: imu_filter_node.cpp  imu_filter_nodelet.cpp  imu_filter_ros.cpp
roller_eye/src/nodes/media_core/: alg_backing_up.cpp  alg_backing_up.h  audio_stream_pub.cpp  media_core_node.cpp  mono_image_pub.cpp  mono_image_pub.h  motion_detect.cpp  motion_detect.h  obj_detect_pub.cpp  pacat_simple.cpp  pic_stream_pub.cpp  video_stream_pub.cpp
roller_eye/src/nodes/motor/: motor_node.cpp  motor_tune_node.cpp
roller_eye/src/pltlib/: msgqueue.c  plog.c  plog.h  plt_download.c  plt_malloc.c  plt_tools.c  plterrno.c  video_stream.c
roller_eye/src/pltlibplus/: camera_handle.cpp  cv_img_stream.cpp  device_interface.cpp  download_mgr.cpp  graphic_utils.cpp  ibeacon_library.cpp  imu_filter.cpp  motor.cpp  plt_config.cpp  rtmp_pub.cpp  srs_librtmp.cpp  timer_task_sched.cpp  track_trace.cpp  upload_cache_mgr.cpp  url_en_decode.cpp  util_class.cpp  wifi_ops.cpp
roller_eye/src/raspberry/: install.sh  motor.service  motor_serve.py
roller_eye/src/roslib/: algo_utils.cpp  param_utils.cpp  ros_tools.cpp  status_publisher.cpp
roller_eye/src/sensor/: GyroSensor.cpp  InputEventReader.cpp  LightSensor.cpp  MmaSensor.cpp  ProximitySensor.cpp  SensorBase.cpp  isl29028.h  l3g4200d.h  mma8452_kernel.h  nusensors.h
roller_eye/srv/: adjust_exposure_time.srv  adjust_ligth copy.srv  ai_get_detect_setting.srv  ai_set_detect_setting.srv  algo_action.srv  algo_move.srv  algo_roll.srv  cloud_cmd_send.srv  detect_record_get_status.srv  getDiffAngleWhenPatrol.srv  getOdom.srv  get_bist_result.srv  getimu_patrolcalib_status.srv  imu_calib.srv  motion_detect_enable.srv  motion_set_zone.srv  nav_delete_path.srv  nav_get_patrol_name.srv  nav_get_status.srv  nav_list_path.srv  nav_path_start.srv  nav_patrol.srv  nav_waypoint_add.srv  nav_waypoint_query.srv  night_get.srv  programming_exception_handle.srv  programming_msg_handle.srv  record_clean.srv  record_delete_file.srv  record_get_file_num.srv  record_get_file_path.srv  record_get_files.srv  record_get_status.srv  record_start.srv  record_stop.srv  rtmp_start.srv  rtmp_stop.srv  saveTmpPicForStartPath.srv  sched_add_mod.srv  sched_delete.srv  (+15 more)
roller_eye/test/: LSM9DS1_Basic_I2C.cpp  control_emu.py  tty_motor_test.py  update_tool.cpp
roller_eye/test/bist/: BistNode.hpp  bistNode.cpp
roller_eye/test/data/: test-json.txt
roller_eye/test/scripts/: app.txt  common.sh  rtmp_live.sh  rtmp_monitor.sh
roller_eye/thirdpart/: update_tool
roller_eye/thirdpart/moorebot/: moorebot_wm160x30_yuv420p.yuv  moorebot_wm160x30_yuyv422.yuv
(+36 files in other folders)
